# loan

./: .gitignore  PRD.md  README.md  docker-compose.yml  enhancements.md
backend/: .dockerignore  .env.example  Dockerfile  FIXES_IMPLEMENTED.md  TEST_RUNNER_README.md  TEST_SUMMARY.md  alembic.ini  pyproject.toml  run_tests.py  run_tests.sh  run_tests_quick.py  test_upload_fix.sh
backend/.planning/: FINAL_TEST_SUMMARY.md  reliability_test_improvements.md  test_improvements_complete.md  test_improvements_session2.md
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_char_offsets.py  003_add_extraction_metadata.py
backend/examples/: __init__.py  account_examples.py  borrower_examples.py  income_examples.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/: __init__.py  borrowers.py  dependencies.py  documents.py  errors.py  tasks.py
backend/src/extraction/: __init__.py  chunker.py  complexity_classifier.py  confidence.py  consistency.py  deduplication.py  extraction_config.py  extraction_router.py  extractor.py  langextract_processor.py  langextract_visualizer.py  llm_client.py  offset_translator.py  prompts.py  schemas.py  validation.py
backend/src/ingestion/: __init__.py  cloud_tasks_client.py  docling_processor.py  document_service.py
backend/src/models/: __init__.py  borrower.py  document.py
backend/src/ocr/: __init__.py  lightonocr_client.py  ocr_router.py  scanned_detector.py
backend/src/storage/: __init__.py  database.py  gcs_client.py  models.py  repositories.py
backend/tests/: __init__.py  conftest.py
backend/tests/extraction/: test_chunker.py  test_complexity_classifier.py  test_confidence.py  test_consistency.py  test_deduplication.py  test_extractor.py  test_llm_client.py  test_validation.py
backend/tests/integration/: __init__.py  conftest.py  test_api_contracts.py  test_async_processing.py  test_database_resilience.py  test_delete_reupload.py  test_docling_integration.py  test_document_delete_autoflush.py  test_documents_api.py  test_dual_pipeline.py  test_e2e_extraction.py  test_e2e_flow.py  test_e2e_langextract.py  test_sample_documents.py  test_ssn_normalization.py  test_stale_document.py
backend/tests/unit/: test_borrower_repository.py  test_borrower_routes.py  test_char_offset_verification.py  test_cloud_tasks_client.py  test_docling_processor.py  test_document_repository_autoflush.py  (+9 more)
(+335 files in other folders)
